Release v0.0.39
